fix spacing and add cta section

--- a/src/input.css
+++ b/src/input.css
@@ -12,9 +12,20 @@ body {
   background-image: url("../images/bg-shorten-desktop.svg");
   background-repeat: no-repeat;
 }
+
+#cta {
+  background-image: url("../images/bg-boost-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @media (max-width: 768px) {
   #form {
     background-image: url("../images/bg-shorten-mobile.svg");
     background-position: right top;
+  }
+  #cta {
+    background-image: url("../images/bg-boost-desktop.svg");
+    background-repeat: no-repeat;
   }
 }
